# KCI_openAPI

./: .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  server.json
.github/workflows/: build-mcpb.yml  publish-mcp.yml
config/: borderline_slow.yaml  search.example.yaml
docs/: ARCHITECTURE.md  DIRECTORY_SUBMISSION.md  KCI_API_GUIDE.md  KCI_OAI_PMH_GUIDE.md  SUBMISSION.md  작업일지.md
mcpb/: manifest.json
packaging/binary/: entry.py  manifest.json
scripts/: mcp_smoke.py  pilot_harvest.py
src/kci_mcp/: __init__.py  cli.py  client.py  config.py  exporters.py  models.py  oai_client.py  parser.py  router.py  server.py
tests/: conftest.py  samples.py  test_client_rest.py  test_parser_oai.py  test_parser_rest.py  test_router_exporters.py
